--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,57 +3,59 @@
 
 <h1>Burgers!</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>Add a Burger</h2>
+<form class="create-update-form" action="/" method="POST">
+
+  <div class="form-group">
+    <label for="ca">Burger Name:</label>
+    <input type="text" id="ca" name="name">
+  </div>
+
+  <div class="form-group">
+    <label for="devoured">Eat it!</label><br>
+    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
+    <input type="radio" name="devoured" value="0"> Awake? Change this, Leslie
+  </div>
+
+  <button type="submit">Add Burger, baby!</button>
+</form>
+
+<h2>Burgers to eat:</h2>
 <ul>
-  {{#each cats}}
-    {{#unless this.sleepy}}
+  {{#each burgers}}
+    {{#unless this.devoured}}
       <li>
         {{this.name}}
 
         <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="sleepy" value="true">
-          <button type="submit">SLEEP TIME!</button>
+          <input type="hidden" name="devoured" value="true">
+          <button type="submit">DINNER TIME!</button>
           <button type="submit">DELETE!</button>
         </form>
 
-        {{> cats/delete-cat}}
+        {{!--{{> burgers/delete-burger}}--}}
       </li>
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>Burgers I ate</h2>
 
 <ul>
-  {{#each cats}}
-    {{#if this.sleepy}}
+  {{#each burgers}}
+    {{#if this.devoured}}
       <li>
         {{this.name}}
 
         <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="sleepy" value="false">
+          <input type="hidden" name="devoured" value="false">
           <button type="submit">WAKE UP!</button>
         </form>
 
-        {{> cats/delete-cat}}
+        {{!--{{> burgers/delete-burger}}--}}
       </li>
     {{/if}}
   {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
-<form class="create-update-form" action="/" method="POST">
 
-  <div class="form-group">
-    <label for="ca">Cat Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div>
-
-  <button type="submit">Add Burger, baby!</button>
-</form>
