--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,3 +1,17 @@
+body {
+    background: dimgray;
+}
+
+h1 {
+    color: white;
+    font-family: 'Alex Brush', cursive;
+}
+
+h2 {
+    color: white;
+    font-family: 'Alex Brush', cursive;
+}
+
 li {
     padding: 15px;
     margin: 5px;
