--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,43 +1,56 @@
-body {
-    background: dimgray;
-}
-
-.page-header {
-    color: white;
-    font-family: 'Alex Brush', cursive;
-    background: darkslategray;
+ .page-header {
+     color: white;
+     font-family: 'Alex Brush', cursive;
+     background: darkslategray;
+     background: black;
+     font-size: 40px;
+     text-align: center
+ }
+ 
+ h2 {
+     color: white;
+     font-family: 'Alex Brush', cursive;
+ }
+ 
+ li {
+     padding: 15px;
+     margin: 5px;
+     background: black;
+     font-size: 20px;
+ }
+ 
+ .label {
+     font-weight: bold;
+ }
+ /*.third {
     background: black;
-    font-size: 40px;
-    text-align: center
-}
-
-burgerhed:.page-header {
-    color: red;
-}
-
-.elegant {}
-
-h2 {
     color: white;
-    font-family: 'Alex Brush', cursive;
-}
-
-li {
-    padding: 15px;
-    margin: 5px;
-    background: #faebd7;
-}
-
-.label {
-    font-weight: bold;
-}
-
-.create-update-form {
-    padding: 5px;
-    margin: 5px;
-    background: aqua;
-}
-
-.form-group {
-    margin-bottom: 5px;
-}
+    border-radius: 0%
+}*/
+ 
+ .caption:h2 {
+     color: white;
+ }
+ 
+ .caption {
+     background: black;
+     color: white;
+     border-radius: 3%
+ }
+ 
+ li {
+     color: white;
+ }
+ 
+ .create-update-form {
+     text-align: center;
+     padding: 5px;
+     margin: 5px;
+     background: black;
+     color: white;
+     border-radius: 3%
+ }
+ 
+ .form-group {
+     margin-bottom: 5px;
+ }
