--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,103 +1,107 @@
-{{!--Setup the main.handlebars file --}}
-{{!--so it's able to be used by Handlebars.--}}
+{{!--Setup the main.handlebars file --}} {{!--so it's able to be used by Handlebars.--}}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-    {{!--css link--}}
-    <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-    {{!--bootstrap--}}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    {{!--google fonts--}}
+    <meta charset="UTF-8"> {{!--css link--}}
+    <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" /> {{!--bootstrap--}}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> {{!--google fonts--}}
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Raleway|Righteous" rel="stylesheet">
     <title>Burgers!</title>
-  </head>
+</head>
 
-<div class="page-header container">
-  <h2> </h2>
-        <h1 style="font-size:70px ">Elegant<span style="font-family: 'Righteous', cursive;">Burger</span></h1><span style="font-family: 'Raleway', sans-serif;">Where the elite eat meat</span> 
-</div>
- <div class="row containter">
-           
-  <div class="col-sm-12 col-lg-4">
-    <div class="thumbnail">
-      <img src="../../assets/img/burgers.jpg" alt="...">
-      <div class="caption">
-       
-      </div> 
-       {{!--links 2 backend...data sent to backend--}}
-<form class="create-update-form" action="/" method="POST">
+<div class="container">
 
-  <div class="form-group">
-    <h3>Request a Burger</h3>
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
-
-  <button class="btn btn-warning" type="submit">Add Burger, baby!</button>
-</form>
-        <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
+    <div class="page-header container">
+        <h2> </h2>
+        <h1 style="font-size:70px ">Elegant<span style="font-family: 'Righteous', cursive;">Burger</span></h1><span style="font-family: 'Raleway', sans-serif; font-size:x-large">Where the elite eat meat</span>
     </div>
-  </div>
-</div>
-       
+    <div class="row containter">
 
-{{!--2nd thumbnail  box--}}
+        {{!--1st--}}
+        <div class="col-sm-12 col-lg-4">
+            <div class="thumbnail">
+                <img src="../../assets/img/burgers.jpg" alt="...">
+                <div class="caption">
 
-  <div class="col-sm-12 col-lg-3">
-    <div class="thumbnail">
-      <img src="..." alt="...">
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
+                </div>
+                {{!--links 2 backend...data sent to backend--}}
+                <form class="create-update-form" action="/" method="POST">
+
+                    <div class="form-group">
+
+                        <label for="ca">
+                            <h3>Request Burger</h3></label>
+                        <input type="text" id="ca" name="name">
+                    </div>
+
+                    <button class="btn btn-warning" name: "+ burger" type="submit">Add Burger</button>
+                </form>
+
+            </div>
+        </div>
+
+        {{!--2nd --}}
+        <div class="col-sm-12 col-lg-4">
+            <div class="thumbnail">
+                <img src="../../assets/img/burgers.jpg" alt="...">
+                <div class="caption">
+
+                </div>
+                {{!--links 2 backend...data sent to backend--}}
+                <form class="create-update-form" action="/" method="POST">
+
+                    <div class="form-group">
+
+                        <label for="ca">
+                            <h3>Request Burger</h3></label>
+                        <input type="text" id="ca" name="name">
+                    </div>
+
+                    <button class="btn btn-warning" type="submit">Add Burger, baby!</button>
+                </form>
+
+            </div>
+        </div>
+
+        {{!--3rd --}}
+        <div class="col-sm-12 col-lg-4 third">
+            <div class="thumbnail ">
+                <div class="caption">
+                    <h2 style="color:white; text-align:center">Burgers eaten:</h2>
+                    <hr style="color:white"<ol style="color:white">
+                        {{#each burgers}} {{#if this.devoured}}
+                        <li style="color:white">
+                            {{this.burger_name}}
+
+                            <form action="/{{this.id}}?_method=PUT" method="POST">
+                                <input type="hidden" name="devoured" value="false">
+                            </form>
+
+                            {{!--{{> burgers/delete-burger}}--}}
+                        </li>
+                        {{/if}} {{/each}}
+                    </ol>
+
+                </div>
+
+            </div>
+        </div>
+        {{!--end row div--}}
     </div>
-  </div>
-</div>
-</div>
 
+    <h2>Burgers to eat:</h2>
+    <ol>
+        {{#each burgers}} {{#unless this.devoured}}
+        <li>
+            {{this.burger_name}}
 
+            <form action="/{{this.id}}?_method=PUT" method="POST">
+                <input type="hidden" name="devoured" value="true">
+                <button type="submit">Bon Appétit</button>
+            </form>
 
-
-
-<h2>Burgers eaten:</h2>
-
-<ol>
-  {{#each burgers}}
-    {{#if this.devoured}}
-      <li>
-        {{this.burger_name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="false">
-          <button type="submit">Another, please</button>
-        </form>
-
-        {{!--{{> burgers/delete-burger}}--}}
-      </li>
-    {{/if}}
-  {{/each}}
-</ol>
-
-<h2>Burgers to eat:</h2>
-<ol>
-  {{#each burgers}}
-    {{#unless this.devoured}}
-      <li>
-        {{this.burger_name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="true">
-          <button type="submit">Bon Appétit</button>
-        </form>
-
-        {{!--{{> burgers/delete-burger}}--}}
-      </li>
-    {{/unless}}
-  {{/each}}
-</ol>
-
-
-
+            {{!--{{> burgers/delete-burger}}--}}
+        </li>
+        {{/unless}} {{/each}}
+    </ol>
