--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,22 +21,25 @@
         {{!--1st--}}
         <div class="col-sm-12 col-lg-4">
             <div class="thumbnail">
-                <img src="../../assets/img/burgers.jpg" alt="...">
                 <div class="caption">
+                  <h2 style="color:white; text-align:center">Burgers to eat</h2>
+                    <hr style="color:white"<ol style="color:white">
+<ol>
+        {{#each burgers}} {{#unless this.devoured}}
+        <li>
+            {{this.burger_name}}
 
+            <form action="/{{this.id}}?_method=PUT" method="POST">
+                <input type="hidden" name="devoured" value="true">
+                <button class="btn btn-warning" type="submit">Bon Appétit</button>
+            </form>
+
+            {{!--{{> burgers/delete-burger}}--}}
+        </li>
+        {{/unless}} {{/each}}
+    </ol>
                 </div>
-                {{!--links 2 backend...data sent to backend--}}
-                <form class="create-update-form" action="/" method="POST">
-
-                    <div class="form-group">
-
-                        <label for="ca">
-                            <h3>Request Burger</h3></label>
-                        <input type="text" id="ca" name="name">
-                    </div>
-
-                    <button class="btn btn-warning" name: "+ burger" type="submit">Add Burger</button>
-                </form>
+               
 
             </div>
         </div>
@@ -58,7 +61,7 @@
                         <input type="text" id="ca" name="name">
                     </div>
 
-                    <button class="btn btn-warning" type="submit">Add Burger, baby!</button>
+                    <button class="btn btn-warning" type="submit">Add Burger</button>
                 </form>
 
             </div>
@@ -68,7 +71,7 @@
         <div class="col-sm-12 col-lg-4 third">
             <div class="thumbnail ">
                 <div class="caption">
-                    <h2 style="color:white; text-align:center">Burgers eaten:</h2>
+                    <h2 style="color:white; text-align:center">Burgers eaten</h2>
                     <hr style="color:white"<ol style="color:white">
                         {{#each burgers}} {{#if this.devoured}}
                         <li style="color:white">
@@ -90,18 +93,5 @@
         {{!--end row div--}}
     </div>
 
-    <h2>Burgers to eat:</h2>
-    <ol>
-        {{#each burgers}} {{#unless this.devoured}}
-        <li>
-            {{this.burger_name}}
-
-            <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="true">
-                <button type="submit">Bon Appétit</button>
-            </form>
-
-            {{!--{{> burgers/delete-burger}}--}}
-        </li>
-        {{/unless}} {{/each}}
-    </ol>
+     
+    
